<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.Signup"
        android:background="@drawable/top"

android:gravity="center">
    <LinearLayout

            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="290dp"
            android:layout_height="wrap_content">
        <EditText
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:id="@+id/et_first_name"
                style="@style/viewCustom"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName"/>

        <EditText
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:id="@+id/editEmail1"
                style="@style/viewCustom"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        <EditText
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:id="@+id/EditPassword1"
                style="@style/viewCustom"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/boy"
                android:id="@+id/accountImage"
                android:layout_gravity="center_horizontal"
        />


        <Button

                android:id="@+id/btn_register"
                style="@style/viewCustom"
                android:background="@color/colorPrimary"
                android:text="@string/create_act"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="invisible"
        />


    </LinearLayout>



</RelativeLayout>