<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.SignIn"
        android:background="@drawable/top"
        android:gravity="center"
>
    <LinearLayout

            android:gravity="center_horizontal"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
                android:id="@+id/logInEmail1"
                style="@style/viewCustom"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"
                android:textColorHint="#FFFFFF"
        />
        <EditText
                android:id="@+id/logInPassword"
                style="@style/viewCustom"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:textColorHint="#FFFFFF"/>
        <Button
                android:id="@+id/btn_login"
                style="@style/viewCustom"
                android:background="@color/colorPrimary"
                android:text="@string/login_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
        />
        <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/viewCustom"
                android:textColor="#ffffff"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textSize="20sp"/>
        <Button

                android:id="@+id/btn_register_account"
                android:layout_marginTop="60dp"
                android:textStyle="bold"
                android:text="Sign Up"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </LinearLayout>


    <ProgressBar

            style="?android:attr/progressBarStyle"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            android:visibility="invisible"
            android:layout_centerInParent="true"/>

</RelativeLayout>